# wiremock-grpc-rs

./: .gitignore  Cargo.toml  README.md  build.rs  release-plz.toml
.github/workflows/: release-plz.yml  rust.yml
lib/: Cargo.toml  README.md  hello.proto
lib-macro/: Cargo.toml
lib-macro/src/: lib.rs  parser.rs
lib/src/: builder.rs  codegen.rs  grpc_server.rs  invocations.rs  lib.rs  mock_server.rs  tonic_ext.rs
lib/tests/: features.rs  lib.rs
protogen/: Cargo.toml
protogen/src/: hello.rs  lib.rs
src/: builder.rs  codegen.rs  greeter_code.rs  lib.rs  mock_server.rs  mock_server_macro.rs  tonic_ext.rs  wiremock.rs
src/wiremock/: builder.rs  codegen.rs  grpc_server.rs  invocations.rs  tonic_ext.rs
test/: Cargo.toml
test/src/: codegen_test.rs  features_test.rs  lib.rs  mocks_test.rs  proc_macro_test.rs
tests/: codegen.rs  codegen_test.rs  features.rs  features_test.rs  lib.rs  mocks.rs  mocks_test.rs
tests_crate/: Cargo.toml
tests_crate/src/: lib.rs
wiremock-grpc/: CHANGELOG.md  Cargo.toml  build.rs
wiremock-grpc-macros/: CHANGELOG.md  Cargo.toml  README.md
wiremock-grpc-macros/src/: lib.rs
wiremock-grpc/proto/: extended.proto  hello.proto
wiremock-grpc/src/: lib.rs
wiremock-grpc/src/wiremock/: builder.rs  codegen.rs  grpc_server.rs
wiremock-grpc/tests/: codegen_test.rs  features_test.rs  mocks_test.rs  type_safe_api_test.rs  validations_test.rs
