[workspace]
members = ["wiremock-grpc", "wiremock-grpc-macros"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Mohammad Mustakim Ali <i@mustak.im>"]
repository = "https://github.com/mustakimali/wiremock-grpc-rs"
categories = ["development-tools"]
keywords = ["grpc", "mock", "testing"]

[workspace.dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 2 }
