[workspace]
members = ["wiremock-grpc", "wiremock-grpc-macros"]
resolver = "2"

[workspace.package]
version = "0.4.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Mohammad Mustakim Ali <i@mustak.im>"]
repository = "https://github.com/mustakimali/wiremock-grpc-rs"
categories = ["development-tools"]
keywords = ["grpc", "mock", "testing"]

[workspace.dependencies]
# Local
wiremock-grpc-macros = { version = "0.1.0", path = "wiremock-grpc-macros" }

# External
http-body = { version = "1.0.1" }
log = { version = "0.4.22" }
proc-macro2 = "1"
prost = { version = "0.14" }
quote = "1"
rand = { version = "0.8.5" }
syn = { version = "2", features = ["full", "parsing"] }
tokio = { version = "1.41.1" }
tonic = { version = "0.14" }
tonic-build = { version = "0.14" }
tonic-prost = { version = "0.14" }
tonic-prost-build = { version = "0.14" }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 2 }
