[package]
name = "wiremock-grpc-protogen"
version = "0.1.0"
edition = "2021"
description = "Proto generated client-server code"
publish = false

[lib]
doc =  false

[dependencies]
tonic = { version = "0.12.3", features = ["codegen", "prost", "transport"] }
tonic-build = { version = "0.12.3",features = ["prost", "transport"] }
prost = { version = "0.13.3" }
prost-types = { version = "0.13.3" }
