[package]
name = "wiremock-grpc-test"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
doc =  false
doctest = false

[dependencies]
tokio = "1.12.0"
wiremock-grpc = {path = "../lib/"}
wiremock-grpc-proc-macro = {path = "../lib-macro/"}
wiremock-grpc-protogen = {path = "../protogen/"}
#wiremock-grpc = "0.0.3-alpha1"
